Fix Overflow Nav

--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -1,3 +1,7 @@
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .active {
   border-bottom: 2px solid #2f2f2f;
 }
